--- a/frontend/home.css
+++ b/frontend/home.css
@@ -76,57 +76,23 @@ body {
     border-radius: 10px;
 }
 
-/*#departure {
-    display: flex;
-    justify-content: left;
-    align-items: left;
-    padding-left: 100px;
-    padding-bottom: 50px;
-    background-color: rgb(227, 245, 231);
-    margin-top: 50px;
-    border-radius: 10px;
-    border: none;
-    font-family: "Gill Sans", sans-serif;
-}*/
-
-
 #main-arrival {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    grid-column-start: 1;
-    grid-column-end: 2;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     margin-left: 30px;
     margin-right: 30px;
     border-radius: 10px;
     width: 80%;
     height: 5vh;
-    background-color: grey;
+    background-color: rgb(183, 179, 179);
 }
 
-#arrival {
-    display: flex;
-    justify-content: left;
-    align-items: left;
-    padding-left: 100px;
-    padding-bottom: 50px;
-    background-color: rgb(227, 245, 231);
-    margin-bottom: 20px;
-    border-radius: 10px;
-    border: none;
-    font-family: "Gill Sans", sans-serif;
-}
 
 #main-date {
-    grid-row-start: 3;
-    grid-row-end: 4;
-    grid-column-start: 1;
-    grid-column-end: 2;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     margin-left: 30px;
     margin-right: 30px;
     border-radius: 10px;
@@ -135,26 +101,19 @@ body {
     height: 5vh;
 }
 
-#date {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 150px;
-    padding-bottom: 50px;
-    background-color: rgb(227, 245, 231);
-    border-radius: 10px;
-    border: none;
-}
+
 
 #main-button {
-    grid-row-start: 4;
-    grid-row-end: 5;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    display: flex;
 
+    display: flex;
     justify-content: center;
     align-items: center;
+    width: 80%;
+    height: 5vh;
+    margin-left: 30px;
+    margin-right: 30px;
+    border-radius: 10px;
+    background-color: aquamarine;
 }
 
 .bouton-lien {
@@ -214,11 +173,6 @@ body {
 
 
 
-#notfound {
-    display: none;
-    width: 100px;
-    height: 100px;
-}
 
 #no-found {
     width: 100px;
