--- a/frontend/home.css
+++ b/frontend/home.css
@@ -134,7 +134,8 @@ body {
 
 #train {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+
     align-items: center;
     width: 35%;
     height: 60vh;
@@ -168,10 +169,12 @@ body {
     align-items: center;
     font-family: "Gill Sans", sans-serif;
     color: aliceblue;
-
 }
 
-
+.trip {
+    display: flex;
+    flex-direction: column;
+}
 
 
 #no-found {
