--- a/frontend/booking.css
+++ b/frontend/booking.css
@@ -22,6 +22,19 @@ body {
 
 }
 
+#trip {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    width: 100vh;
+    height: 40vh;
+    color: black;
+
+}
+
 #booking-header {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 3vh;
